# RoboticsFinalProject

./: LICENSE  README.md
firmware/eye_tracker_servo_controller/: eye_tracker_servo_controller.ino
src/eye_tracker_bringup/: package.xml  setup.cfg  setup.py
src/eye_tracker_bringup/config/: arm_params.yaml
src/eye_tracker_bringup/launch/: eye_tracker_arm.launch.py  vision_only.launch.py
src/eye_tracker_bringup/urdf/: cobot_arm.urdf
src/eye_tracker_ik/: package.xml  setup.cfg  setup.py
src/eye_tracker_ik/eye_tracker_ik/: ik_node.py  target_marker_node.py
src/eye_tracker_vision/: package.xml  setup.cfg  setup.py
src/eye_tracker_vision/eye_tracker_vision/: vision_node.py
