<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eye_tracker_bringup</name>
  <version>1.0.0</version>
  <description>Paquete de lanzamiento para el sistema Eye Tracker Arm</description>
  <maintainer email="pablo@todo.todo">pablo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>eye_tracker_vision</exec_depend>
  <exec_depend>eye_tracker_ik</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
